css/src/_widgets.scss
.widget {
	.widget-wrap > ul {
		list-style-position: inside;
		margin: {
			bottom: 0;
			left: 0;
		}
	}
}

.bordered-widget {
	margin-top: -$global-layout-space;

	.item {
		border-bottom: 1px solid $dark-gray;
		display: flex;
		flex: 1 1 100%;
	}

	.left {
		display: block;
		padding: $global-layout-space $global-layout-space / 2;
		border-right: 1px solid $dark-gray;
		width: 20%;
		text-align: center;
	}

	.right {
		display: block;
		padding: $global-layout-space;
		width: 80%;
	}

	.button {
		margin: $paragraph-margin-bottom 0 0;
	}
}

.agt-sub {
	$title-height: 34px;

	background-color: $white;
	text-align: center;
	position: relative;
	padding: 0 0 .7rem;
	min-width: 175px;

	h4,
	input {
		font-size: 1rem;
		line-height: #{$title-height - 2px};
	}

	h4,
	input[type="email"] {
		border: 1px solid $dark-gray;
		padding: 0 .7rem;
	}

	h4 {
		display: inline-block;
		background: $white;
		margin: 0;
		border: 1px solid $dark-gray;
		padding: 0 .7rem;

		&::before {
			display: none;
		}
	}

	input {
		text-align: center;
		margin-bottom: .5rem;

		&[type="email"] {
			font-style: italic;

			&:focus {
				font-style: normal;
			}
		}
	}

	*[type="submit"] {
		border: none;
		margin-bottom: 0;
		padding: 0 0.5rem 3px;
		cursor: pointer;
		background-color: $white;
		font: {
			size: inherit;
			family: inherit;
		}
		line-height: inherit;

		&,
		&:hover,
		&:focus {
			color: $body-font-color;
			box-shadow: none;
		}
	}

	.title-wrap,
	.textwidget {
		padding-top: 0;
	}

	.submit-wrap {
		background: url("../images/widget-arrows.svg") center center/contain transparent no-repeat;
		display: block;
		font: {
			family: $tungsten;
			size: 2rem;
		}
		line-height: 1;
		text: {
			align: center;
			transform: uppercase;
		}
	}

	.widget-wrap {
		position: relative;
		z-index: 1;
		flex-wrap: nowrap;
	}

	@include breakpoint(small only) {
		padding-bottom: 0;

		h4 {
			position: absolute;
			top: 50%;
			left: 0;
			transform: translate(10px, -50%);
			font-size: .8rem;
			white-space: nowrap;
		}

		input[type="email"],
		.submit-wrap {
			margin: 0.5rem 0;
		}

		.title-wrap {
			@include xy-cell(auto, $gutter-output: false, $gutters: 0);
			flex: 0 1 160px;
			background: $maroon;
			position: relative;
		}

		.textwidget {
			@include xy-cell(auto, false);
		}

		@include breakpoint(460px down) {
			h4 {
				white-space: normal;
				line-height: 15px;
				padding: {
					top: 0.25rem;
					bottom: 0.25rem;
				}
			}

			.submit-wrap {
				font-size: 1.7rem;
			}
		}
	}

	@include breakpoint(medium) {

		&::before {
			content: "";
			display: block;
			width: 100%;
			height: $title-height;
			background: $maroon;
			position: absolute;
			z-index: 1;
		}

		.submit-wrap {
			background: url("../images/widget-arrows.svg") center center/contain transparent no-repeat;
			text-align: center;
			font-size: 2rem;

			@include breakpoint(900px down) {
				font-size: 1.5rem;

				*[type="submit"] {
					padding-bottom: 2px;
				}
			}
		}

		h4 {
			position: static;

			@include breakpoint(960px down) {
				font-size: 0.75rem;
			}

			@include breakpoint(659px down) {
				font-size: 0.65rem;
			}
		}

		.title-wrap {
			margin-bottom: $header-margin-bottom;
		}

		.submit-wrap {
			display: block;
		}

		.widget-wrap {
			padding-top: $title-height / 2;
			flex-wrap: wrap;
		}

		.cell.textwidget {
			width: 86%;
			margin: {
				left: 7%;
				right: 7%;
			}
		}

		@include breakpoint(960px down) {
			.title-wrap {
				margin: {
					left: 7%;
					right: 7%;
				}
			}

			.grid-x > .cell.medium-12.title-wrap {
				width: calc(100% - 14%);
			}
		}
	}

	&.invert {
		&::before {
			background-color: transparent;
		}

		.widget-wrap {
			padding-top: 0;
		}

		h4 {
			background-color: transparent;
			border: 0 none;
			color: $white;
			line-height: 1;
		}

		.submit-wrap {
			background-image: url("../images/widget-arrows-white.svg");
		}

		*[type="submit"] {
			color: $white;
		}

		@include breakpoint(medium) {
			.title-wrap {
				margin-top: .5rem;
			}
		}
	}
}

.widget-title + hr {
	border-color: $dark-gray;
	margin: {
		left: -$global-layout-space;
		right: -$global-layout-space;
	}
}

.widgets-post-share {
	text-align: center;
	margin-bottom: 2 * $grid-margin-gutters;

	.medium-card {
		display: flex;
		flex-wrap: nowrap;

		> hr + .widget {
			.addtoany_list > a:first-child {
				padding-left: 0;
			}

			& + .widget .addtoany_list > a:last-child {
				padding-right: 0;
			}
		}
	}

	.widget {
		display: inline-block;
	}

	.widget-title,
	.widget-title + hr {
		display: none;
	}

	.addtoany_list {
		line-height: 48px!important; // sass-lint:disable-line no-important

		a {
			height: 48px;

			img {
				width: 48px;
				height: 48px;
			}
		}

		.a2a_count {
			height: 32px!important; // sass-lint:disable-line no-important
			line-height: 32px!important; // sass-lint:disable-line no-important
			font-size: 16px!important; // sass-lint:disable-line no-important
			width: 64px!important; // sass-lint:disable-line no-important
			margin-top: 8px;
		}
	}

	@include breakpoint(385px down) {
		.addtoany_list {
			line-height: 40px!important; // sass-lint:disable-line no-important

			a {
				height: 40px;

				img {
					width: 40px;
					height: 40px;
				}
			}

			.a2a_count {
				margin-top: 4px;
			}
		}
	}

	@include breakpoint(medium) {
		text-align: left;

		.grid-x > &.cell {
			width: 150px;
		}

		.medium-card {
			display: block;
		}

		.widget {
			display: block;
			height: auto;
		}

		.widget-title,
		.widget-title + hr {
			display: block;
		}

		.widget ~ .widget,
		.addtoany_list a ~ a {
			margin-top: $global-layout-space;
		}

		.widget .addtoany_list a {
			display: flex;
			flex-wrap: nowrap;
			align-items: center;
			padding: 0;
			height: auto;

			img {
				width: 50%;
				max-width: 64px;
				flex-shrink: 0;
			}
		}

		.a2a_counter .a2a_count,
		.addtoany_list a:not(.a2a_count)::after {
			display: inline-block;
			flex-shrink: 1;
			width: 50%!important; // sass-lint:disable-line no-important
			margin-left: $global-layout-space / 2;
			hyphens: auto;
			text-transform: uppercase;
		}

		.a2a_counter .a2a_count {
			margin-top: 0;
			width: 128px!important; // sass-lint:disable-line no-important
		}

		.addtoany_list a {
			img {
				width: 64px;
				height: auto;
			}
		}

		.addtoany_list a:not(.a2a_count)::after {
			height: auto;
			line-height: 1;
			font-size: 14px;
		}

		.a2a_button_twitter::after {
			content: "Tweet";
		}

		.a2a_button_flickr::after {
			content: "Flickr";
		}

		.a2a_button_youtube::after {
			content: "Watch";
		}

		.a2a_button_feed::after {
			content: "News\00ad feed";
		}

		@include breakpoint(1000px down) {

			.grid-x > &.cell {
				width: rem-calc(64);
			}

			.widget-title,
			.widget-title + hr {
				display: none;
			}

			.widget .addtoany_list {
				a {
					display: block;
					text-align: center;
					height: 64px;

					img {
						width: 64px;
					}
				}

				.a2a_count,
				a::after {
					display: none;
				}
			}

			.medium-card {
				padding: 0;
				border: 0;
				background-color: transparent;
			}

			.widget ~ .widget,
			.addtoany_list a ~ a {
				margin-top: $global-layout-space / 2;
			}
		}
	}
}

.widget .rp4wp-related-posts {
	clear: both;

	ul {
		float: none;

		> li {
			padding: {
				top: 20px;
				bottom: 0;
			}

			&:first-child {
				padding-top: 0;
			}
		}
	}

	p {
		margin-bottom: 0;
	}

	.rp4wp-related-post-image {
		padding-right: $grid-margin-gutters;
	}

	.rp4wp-related-post-content a {
		font-weight: bold;
		text-decoration: underline;
	}
}

